# ResearchGraph

./: .gitignore  .rancher-note.md  E2E_TESTING_GUIDE.md  E2E_TESTING_PROGRESS.md  E2E_TEST_EXECUTION.md  E2E_TEST_REPORT.md  IMPLEMENTATION_PLAN.md  MANUAL_UI_TESTING.md  Makefile  NEXT_STEPS.md  PRD.md  README.md  RUN_E2E_TESTS.md  docker-compose.yml  projectConcept.md
backend/: .env.example  T11_IMPLEMENTATION_SUMMARY.md  pyproject.toml  pytest_playwright.py  requirements.txt
backend/app/: __init__.py  config.py  dependencies.py  main.py  observability.py
backend/app/agent/: sessions.py  state.py  tools.py  workflow.py
backend/app/api/: routes_ask.py  routes_citation.py  routes_graph.py  routes_ingest.py  routes_search.py  routes_sessions.py
backend/app/db/: connection.py  manager.py  schema.py
backend/app/ingestion/: embeddings.py  extractors.py  graph_builder.py  loaders.py  pipeline.py
backend/app/models/: domain.py  schemas.py
backend/app/retrieval/: hybrid.py
backend/tests/: conftest.py
backend/tests/e2e/: conftest.py  test_api_smoke.py  test_ask_flow.py  test_citation_path.py  test_error_handling.py  test_full_flow.py  test_ingestion_flow.py  test_multi_paper.py  test_performance.py  test_session_persistence.py  test_ui_flows.py
backend/tests/fixtures/: E2E_TEST_DATA.md  create_test_pdf.py
backend/tests/integration/: test_api.py  test_ask_sources_integration.py  test_deletion.py  test_graph_builder_integration.py  test_graph_subgraph_integration.py  test_schema_integration.py  test_sessions_integration.py  test_vector_store_integration.py
(+44 files in other folders)
